little changes in MVC

--- a/Garage2.5/Garage2.5.csproj
+++ b/Garage2.5/Garage2.5.csproj
@@ -132,13 +132,13 @@
     <Compile Include="Controllers\FordonstypsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MedlemsController.cs" />
-    <Compile Include="DAL\Garage2_5Context.cs" />
+    <Compile Include="DAL\FordonContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201702171217046_Init.cs" />
-    <Compile Include="Migrations\201702171217046_Init.Designer.cs">
-      <DependentUpon>201702171217046_Init.cs</DependentUpon>
+    <Compile Include="Migrations\201702171423372_init.cs" />
+    <Compile Include="Migrations\201702171423372_init.Designer.cs">
+      <DependentUpon>201702171423372_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Fordon.cs" />
@@ -181,11 +181,6 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Medlems\Create.cshtml" />
-    <Content Include="Views\Medlems\Delete.cshtml" />
-    <Content Include="Views\Medlems\Details.cshtml" />
-    <Content Include="Views\Medlems\Edit.cshtml" />
-    <Content Include="Views\Medlems\Index.cshtml" />
     <Content Include="Views\Fordons\Create.cshtml" />
     <Content Include="Views\Fordons\Delete.cshtml" />
     <Content Include="Views\Fordons\Details.cshtml" />
@@ -196,6 +191,11 @@
     <Content Include="Views\Fordonstyps\Details.cshtml" />
     <Content Include="Views\Fordonstyps\Edit.cshtml" />
     <Content Include="Views\Fordonstyps\Index.cshtml" />
+    <Content Include="Views\Medlems\Create.cshtml" />
+    <Content Include="Views\Medlems\Delete.cshtml" />
+    <Content Include="Views\Medlems\Details.cshtml" />
+    <Content Include="Views\Medlems\Edit.cshtml" />
+    <Content Include="Views\Medlems\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -209,8 +209,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201702171217046_Init.resx">
-      <DependentUpon>201702171217046_Init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201702171423372_init.resx">
+      <DependentUpon>201702171423372_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
